--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="colorPrimary">#77B943</color>
+    <color name="colorPrimaryAccent">#D6FBD8</color>
+    <color name="colorSecondary">#707070</color>
+    <color name="colorSecondaryAccent">#707070 </color>
+    <color name="colorTertiary">#014140</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_200">#fff</color>
+    <color name="purple_500">#fff</color>
 </resources>
