--- a/app/src/main/res/layout/activity_take_picture_instructions.xml
+++ b/app/src/main/res/layout/activity_take_picture_instructions.xml
@@ -28,16 +28,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <ImageButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
         android:backgroundTint="@color/colorPrimaryAccent"
         android:contentDescription="Next screen"
+        app:borderWidth="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_baseline_camera_alt_24" />
+        app:srcCompat="@drawable/ic_baseline_camera_alt_24"
+        app:tint="@color/colorTertiary"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
