--- a/app/src/main/res/layout/activity_fill_tree_info.xml
+++ b/app/src/main/res/layout/activity_fill_tree_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FillTreeInfo">
+    tools:context=".FillTreeInfoActivity">
 
     <ImageView
         android:id="@+id/tree_preview"
