--- a/app/src/main/res/layout/activity_fill_tree_info.xml
+++ b/app/src/main/res/layout/activity_fill_tree_info.xml
@@ -8,10 +8,9 @@
     android:paddingLeft="@dimen/main_padding"
     android:paddingRight="@dimen/main_padding">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".FillTreeInfoActivity">
 
         <ImageView
@@ -21,7 +20,6 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
@@ -48,6 +46,43 @@
             app:layout_constraintTop_toBottomOf="@+id/scientific_name"
             tools:layout_editor_absoluteX="50dp" />
 
+        <!--        aqui empieza en linearLayout de antes -->
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tree_info_diameter_label"
+            android:layout_marginTop="@dimen/tree_info_margin"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <EditText
+            android:id="@+id/editTextNumberDecimal"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            app:layout_constraintBaseline_toBaselineOf="@id/textView6"
+            app:layout_constraintStart_toEndOf="@id/textView6"/>
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            app:layout_constraintBaseline_toBaselineOf="@id/textView6"
+            app:layout_constraintStart_toEndOf="@id/editTextNumberDecimal"
+            android:text="@string/tree_info_height_label" />
+
+        <EditText
+            android:id="@+id/editTextNumberDecimal2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            app:layout_constraintBaseline_toBaselineOf="@id/textView6"
+            app:layout_constraintStart_toEndOf="@id/textView7"
+            android:inputType="numberDecimal" />
+<!--aqui terminan vistas en el linear layout-->
 
         <TextView
             android:id="@+id/textView4"
@@ -57,7 +92,7 @@
             android:text="@string/tree_info_risk_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/margin" />
+            app:layout_constraintTop_toBottomOf="@id/textView6" />
 
         <RadioGroup
             android:id="@+id/radioGroup"
@@ -73,6 +108,7 @@
                 android:id="@+id/radioButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_risk_low"
                 tools:layout_editor_absoluteX="225dp"
                 tools:layout_editor_absoluteY="396dp" />
@@ -81,6 +117,7 @@
                 android:id="@+id/radioButton3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_risk_medium"
                 tools:layout_editor_absoluteX="44dp"
                 tools:layout_editor_absoluteY="405dp" />
@@ -89,6 +126,7 @@
                 android:id="@+id/radioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_risk_high"
                 tools:layout_editor_absoluteX="69dp"
                 tools:layout_editor_absoluteY="348dp" />
@@ -114,59 +152,22 @@
                 android:id="@+id/radioButton4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_stage_low" />
 
             <RadioButton
                 android:id="@+id/radioButton5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_stage_medium" />
 
             <RadioButton
                 android:id="@+id/radioButton6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_stage_high" />
         </RadioGroup>
-
-        <LinearLayout
-            android:id="@+id/margin"
-            android:layout_width="409dp"
-            android:layout_height="@dimen/tree_info_text_height"
-            android:layout_marginTop="@dimen/tree_info_margin"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2">
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tree_info_diameter_label" />
-
-            <EditText
-                android:id="@+id/editTextNumberDecimal"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="numberDecimal" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:text="@string/tree_info_height_label" />
-
-            <EditText
-                android:id="@+id/editTextNumberDecimal2"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="numberDecimal" />
-        </LinearLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </ScrollView>
