--- a/app/src/main/res/layout/activity_fill_tree_info.xml
+++ b/app/src/main/res/layout/activity_fill_tree_info.xml
@@ -8,10 +8,9 @@
     android:paddingLeft="@dimen/main_padding"
     android:paddingRight="@dimen/main_padding">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".FillTreeInfoActivity">
 
         <ImageView
@@ -21,7 +20,6 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
@@ -48,6 +46,41 @@
             app:layout_constraintTop_toBottomOf="@+id/scientific_name"
             tools:layout_editor_absoluteX="50dp" />
 
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tree_info_diameter_label"
+            android:layout_marginTop="@dimen/tree_info_margin"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <EditText
+            android:id="@+id/editTextNumberDecimal"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            app:layout_constraintBaseline_toBaselineOf="@id/textView6"
+            app:layout_constraintStart_toEndOf="@id/textView6"/>
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            app:layout_constraintBaseline_toBaselineOf="@id/textView6"
+            app:layout_constraintStart_toEndOf="@id/editTextNumberDecimal"
+            android:text="@string/tree_info_height_label" />
+
+        <EditText
+            android:id="@+id/editTextNumberDecimal2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            app:layout_constraintBaseline_toBaselineOf="@id/textView6"
+            app:layout_constraintStart_toEndOf="@id/textView7"
+            android:inputType="numberDecimal" />
 
         <TextView
             android:id="@+id/textView4"
@@ -57,7 +90,7 @@
             android:text="@string/tree_info_risk_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/margin" />
+            app:layout_constraintTop_toBottomOf="@id/textView6" />
 
         <RadioGroup
             android:id="@+id/radioGroup"
@@ -73,6 +106,7 @@
                 android:id="@+id/radioButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_risk_low"
                 tools:layout_editor_absoluteX="225dp"
                 tools:layout_editor_absoluteY="396dp" />
@@ -81,6 +115,7 @@
                 android:id="@+id/radioButton3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_risk_medium"
                 tools:layout_editor_absoluteX="44dp"
                 tools:layout_editor_absoluteY="405dp" />
@@ -89,6 +124,7 @@
                 android:id="@+id/radioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_risk_high"
                 tools:layout_editor_absoluteX="69dp"
                 tools:layout_editor_absoluteY="348dp" />
@@ -103,6 +139,7 @@
             app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
         <RadioGroup
+            android:id="@+id/radioGroup3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -114,59 +151,42 @@
                 android:id="@+id/radioButton4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_stage_low" />
 
             <RadioButton
                 android:id="@+id/radioButton5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_stage_medium" />
 
             <RadioButton
                 android:id="@+id/radioButton6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/tree_info_stage_high" />
         </RadioGroup>
 
-        <LinearLayout
-            android:id="@+id/margin"
-            android:layout_width="409dp"
-            android:layout_height="@dimen/tree_info_text_height"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView"
+            android:name="com.three.tree_training_app.TreeMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
             android:layout_marginTop="@dimen/tree_info_margin"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2">
+            app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tree_info_diameter_label" />
-
-            <EditText
-                android:id="@+id/editTextNumberDecimal"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="numberDecimal" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:text="@string/tree_info_height_label" />
-
-            <EditText
-                android:id="@+id/editTextNumberDecimal2"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="numberDecimal" />
-        </LinearLayout>
-
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/tree_info_margin"
+            android:layout_marginBottom="@dimen/tree_info_margin"
+            android:text="Button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </ScrollView>
+
