--- a/app/src/main/res/layout/activity_fill_tree_info.xml
+++ b/app/src/main/res/layout/activity_fill_tree_info.xml
@@ -36,7 +36,7 @@
             tools:layout_editor_absoluteX="85dp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/common_name"
             android:layout_width="match_parent"
             android:layout_height="@dimen/tree_info_text_height"
             android:layout_marginTop="@dimen/tree_info_margin"
@@ -52,11 +52,11 @@
             android:layout_height="wrap_content"
             android:text="@string/tree_info_diameter_label"
             android:layout_marginTop="@dimen/tree_info_margin"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
+            app:layout_constraintTop_toBottomOf="@+id/common_name"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <EditText
-            android:id="@+id/editTextNumberDecimal"
+            android:id="@+id/diameter"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -70,11 +70,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             app:layout_constraintBaseline_toBaselineOf="@id/textView6"
-            app:layout_constraintStart_toEndOf="@id/editTextNumberDecimal"
+            app:layout_constraintStart_toEndOf="@id/diameter"
             android:text="@string/tree_info_height_label" />
 
         <EditText
-            android:id="@+id/editTextNumberDecimal2"
+            android:id="@+id/height"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -93,7 +93,7 @@
             app:layout_constraintTop_toBottomOf="@id/textView6" />
 
         <RadioGroup
-            android:id="@+id/radioGroup"
+            android:id="@+id/risk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -131,12 +131,12 @@
         </RadioGroup>
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/state"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/tree_info_margin"
             android:text="@string/tree_info_stage_title"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+            app:layout_constraintTop_toBottomOf="@+id/risk" />
 
         <RadioGroup
             android:id="@+id/radioGroup3"
@@ -144,7 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
+            app:layout_constraintTop_toBottomOf="@+id/state"
             tools:layout_editor_absoluteX="114dp">
 
             <RadioButton
@@ -184,7 +184,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/tree_info_margin"
             android:layout_marginBottom="@dimen/tree_info_margin"
-            android:text="Button"
+            android:text="@string/tree_info_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
